{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 47,
  "lineage": "f47a66b3-048a-dc65-4ff6-893de2bdcf21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d047a722721da95",
            "association_id": "eipassoc-0bfe69db26fd484e0",
            "domain": "vpc",
            "id": "eipalloc-02d047a722721da95",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bd78f458a9f44adb",
            "private_dns": "ip-10-0-1-65.ec2.internal",
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-34-239-239-35.compute-1.amazonaws.com",
            "public_ip": "34.239.239.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat0-eip"
            },
            "tags_all": {
              "Name": "nat0-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6f621ffa045d6be",
            "association_id": "eipassoc-057ff4a576d6f2980",
            "domain": "vpc",
            "id": "eipalloc-0a6f621ffa045d6be",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03e6920e65015a2b0",
            "private_dns": "ip-10-0-2-133.ec2.internal",
            "private_ip": "10.0.2.133",
            "public_dns": "ec2-54-146-21-38.compute-1.amazonaws.com",
            "public_ip": "54.146.21.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat1-eip"
            },
            "tags_all": {
              "Name": "nat1-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373192543100:internet-gateway/igw-08d9d7d4a3a7f105b",
            "id": "igw-08d9d7d4a3a7f105b",
            "owner_id": "373192543100",
            "tags": {
              "Name": "Main-IGW"
            },
            "tags_all": {
              "Name": "Main-IGW"
            },
            "vpc_id": "vpc-01aa5c396c5e7b6a0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d047a722721da95",
            "connectivity_type": "public",
            "id": "nat-03db65ac98c49ca5d",
            "network_interface_id": "eni-0bd78f458a9f44adb",
            "private_ip": "10.0.1.65",
            "public_ip": "34.239.239.35",
            "subnet_id": "subnet-0c36182ca12100e16",
            "tags": {
              "Name": "Main0-NatGTW"
            },
            "tags_all": {
              "Name": "Main0-NatGTW"
            }
          },
          "dependencies": [
            "aws_eip.nat0",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6f621ffa045d6be",
            "connectivity_type": "public",
            "id": "nat-0b84966e32a9b66e7",
            "network_interface_id": "eni-03e6920e65015a2b0",
            "private_ip": "10.0.2.133",
            "public_ip": "54.146.21.38",
            "subnet_id": "subnet-041a39c3c2a3a6c3b",
            "tags": {
              "Name": "Main1-NatGTW"
            },
            "tags_all": {
              "Name": "Main1-NatGTW"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373192543100:route-table/rtb-070002507d1da43f2",
            "id": "rtb-070002507d1da43f2",
            "owner_id": "373192543100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03db65ac98c49ca5d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private0-RouteTB"
            },
            "tags_all": {
              "Name": "Private0-RouteTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa5c396c5e7b6a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat0",
            "aws_nat_gateway.main0",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373192543100:route-table/rtb-01c915767f56520a3",
            "id": "rtb-01c915767f56520a3",
            "owner_id": "373192543100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b84966e32a9b66e7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private1-RouteTB"
            },
            "tags_all": {
              "Name": "Private1-RouteTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa5c396c5e7b6a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.main1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373192543100:route-table/rtb-098b8c2151eb38d06",
            "id": "rtb-098b8c2151eb38d06",
            "owner_id": "373192543100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d9d7d4a3a7f105b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RouteTB"
            },
            "tags_all": {
              "Name": "Public-RouteTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa5c396c5e7b6a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7efaee631b701b0",
            "route_table_id": "rtb-070002507d1da43f2",
            "subnet_id": "subnet-04298a9b26231a22b"
          },
          "dependencies": [
            "aws_eip.nat0",
            "aws_nat_gateway.main0",
            "aws_route_table.private0",
            "aws_subnet.private0",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064bdcd3f2a2fac66",
            "route_table_id": "rtb-01c915767f56520a3",
            "subnet_id": "subnet-05813a0e13dc9fca3"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.main1",
            "aws_route_table.private1",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000cf3a30956b273e",
            "route_table_id": "rtb-098b8c2151eb38d06",
            "subnet_id": "subnet-0c36182ca12100e16"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab28b34e0a87dc6c",
            "route_table_id": "rtb-098b8c2151eb38d06",
            "subnet_id": "subnet-041a39c3c2a3a6c3b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373192543100:subnet/subnet-04298a9b26231a22b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04298a9b26231a22b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373192543100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private0-Subnet"
            },
            "tags_all": {
              "Name": "Private0-Subnet"
            },
            "vpc_id": "vpc-01aa5c396c5e7b6a0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373192543100:subnet/subnet-05813a0e13dc9fca3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05813a0e13dc9fca3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373192543100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private1-Subnet"
            },
            "tags_all": {
              "Name": "Private1-Subnet"
            },
            "vpc_id": "vpc-01aa5c396c5e7b6a0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373192543100:subnet/subnet-0c36182ca12100e16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c36182ca12100e16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373192543100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public0-Subnet"
            },
            "tags_all": {
              "Name": "Public0-Subnet"
            },
            "vpc_id": "vpc-01aa5c396c5e7b6a0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373192543100:subnet/subnet-041a39c3c2a3a6c3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041a39c3c2a3a6c3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373192543100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public1-Subnet"
            },
            "tags_all": {
              "Name": "Public1-Subnet"
            },
            "vpc_id": "vpc-01aa5c396c5e7b6a0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373192543100:vpc/vpc-01aa5c396c5e7b6a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d718f18e2356453",
            "default_route_table_id": "rtb-0bb00393c6ab97e61",
            "default_security_group_id": "sg-05da0df9b929dca64",
            "dhcp_options_id": "dopt-0ac1eee656bcf12ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01aa5c396c5e7b6a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb00393c6ab97e61",
            "owner_id": "373192543100",
            "tags": {
              "Name": "Main-VPC"
            },
            "tags_all": {
              "Name": "Main-VPC"
            }
          }
        }
      ]
    }
  ]
}